# dependabot-example

./: README.md  pyproject.toml
local-pkg/: setup.py
