[tool.poetry]
name = "example"
version = "0.1.0"
description = "Example"
authors = []
packages = [
    {include = "app"},
]

[tool.poetry.dependencies]
python = "3.6.10"
fastapi = "0.65.0"
Django = "2.2.24"
Pillow = "6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
