[tool.poetry]
name = "example"
version = "0.1.0"
description = "Example"
authors = []
packages = [
    {include = "app"},
]

[tool.poetry.dependencies]
python = "3.6.10"
fastapi = "0.65.0"
Django = "1.9.0"
Pillow = "6.2.2"
Babel = "2.6.0"
pyyaml = "5.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
